--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "webpack serve --config ./webpack.dev.js --mode development --port 3000 --hot",
+    "start": "webpack serve --config ./webpack.dev.js --port 3000",
     "build": "webpack --config ./webpack.dev.js --mode production",
     "tauri": "tauri"
   },
@@ -13,14 +13,19 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@tauri-apps/cli": "^1.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "react-refresh": "^0.14.0",
     "source-map-loader": "^4.0.0",
     "typescript": "^4.4.2",
-    "ts-loader": "^9.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2"
